<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="Game over"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_happy_face"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/score_answer"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/required_score"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
        app:layout_constraintRight_toRightOf="@+id/tv_score_answers"
        app:layout_constraintLeft_toLeftOf="@+id/tv_score_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"/>

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_percentage"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_percentage"
        app:layout_constraintRight_toRightOf="@+id/tv_score_answers"
        app:layout_constraintLeft_toLeftOf="@+id/tv_score_answers"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_percent"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tv_required_answers"
        app:layout_constraintLeft_toLeftOf="@+id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage"/>

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TRY AGAIN"
        tools:ignore="HardcodedText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:background="@color/blue_700"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>